// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItemCollapsible test suite: dataCy 1`] = `
[
  <li
    className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
    data-cy="custom-header"
    disabled={false}
    onClick={[Function]}
    style={
      {
        "cursor": "default",
      }
    }
  >
    <div
      className="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
        data-cy="custom-header-icon"
        data-testid="KeyboardArrowDownIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
        />
      </svg>
    </div>
    <div
      className="MuiListItemText-root css-tlelie-MuiListItemText-root"
      data-cy="custom-header-content"
    >
      <span>
        Collapsible Header
      </span>
    </div>
  </li>,
  <div
    className="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
    data-cy="custom-collapse"
    style={
      {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
      />
    </div>
  </div>,
]
`;

exports[`ListItemCollapsible test suite: default 1`] = `
[
  <li
    className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
    data-cy="list-item-collapsible-header"
    disabled={false}
    onClick={[Function]}
    style={
      {
        "cursor": "default",
      }
    }
  >
    <div
      className="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
        data-cy="list-item-collapsible-header-icon"
        data-testid="KeyboardArrowDownIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
        />
      </svg>
    </div>
    <div
      className="MuiListItemText-root css-tlelie-MuiListItemText-root"
      data-cy="list-item-collapsible-header-content"
    >
      <span>
        Collapsible Header
      </span>
    </div>
  </li>,
  <div
    className="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
    data-cy="list-item-collapsible-collapse"
    style={
      {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
      />
    </div>
  </div>,
]
`;

exports[`ListItemCollapsible test suite: listItem variants 1`] = `
[
  <li
    className="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-6lnq02-MuiListItem-root"
    data-cy="list-item-collapsible-header"
    disabled={false}
    onClick={[Function]}
    style={
      {
        "cursor": "default",
      }
    }
  >
    <div
      className="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
    >
      <span
        className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
        style={
          {
            "height": 24,
            "width": 24,
          }
        }
      />
    </div>
    <div
      className="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
      data-cy="list-item-collapsible-header-content-loading"
    >
      <span
        className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
        style={
          {
            "height": undefined,
            "width": undefined,
          }
        }
      />
    </div>
  </li>,
  <div
    className="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
    data-cy="list-item-collapsible-collapse"
    style={
      {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
      />
    </div>
  </div>,
]
`;

exports[`ListItemCollapsible test suite: open 1`] = `
[
  <li
    className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
    data-cy="list-item-collapsible-header"
    disabled={false}
    onClick={[Function]}
    style={
      {
        "cursor": "default",
      }
    }
  >
    <div
      className="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
        data-cy="list-item-collapsible-header-icon"
        data-testid="KeyboardArrowUpIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
        />
      </svg>
    </div>
    <div
      className="MuiListItemText-root css-tlelie-MuiListItemText-root"
      data-cy="list-item-collapsible-header-content"
    >
      <span>
        Collapsible Header
      </span>
    </div>
  </li>,
  <div
    className="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
    data-cy="list-item-collapsible-collapse"
    style={
      {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
      />
    </div>
  </div>,
]
`;

exports[`ListItemCollapsible test suite: open 2`] = `
[
  <li
    className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
    data-cy="list-item-collapsible-header"
    disabled={false}
    onClick={[Function]}
    style={
      {
        "cursor": "default",
      }
    }
  >
    <div
      className="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
        data-cy="list-item-collapsible-header-icon"
        data-testid="KeyboardArrowUpIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
        />
      </svg>
    </div>
    <div
      className="MuiListItemText-root css-tlelie-MuiListItemText-root"
      data-cy="list-item-collapsible-header-content"
    >
      <span>
        Collapsible Header
      </span>
    </div>
  </li>,
  <div
    className="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
    data-cy="list-item-collapsible-collapse"
    style={
      {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
      />
    </div>
  </div>,
]
`;

exports[`ListItemCollapsible test suite: open variants 1`] = `
[
  <li
    className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
    data-cy="list-item-collapsible-header"
    disabled={false}
    onClick={[Function]}
    style={
      {
        "cursor": "default",
      }
    }
  >
    <div
      className="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
        data-cy="list-item-collapsible-header-icon"
        data-testid="KeyboardArrowUpIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
        />
      </svg>
    </div>
    <div
      className="MuiListItemText-root css-tlelie-MuiListItemText-root"
      data-cy="list-item-collapsible-header-content"
    >
      <span>
        Collapsible Header
      </span>
    </div>
  </li>,
  <div
    className="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
    data-cy="list-item-collapsible-collapse"
    style={
      {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
      />
    </div>
  </div>,
]
`;
